<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WearableOS SettingsApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sensor_add">AddSensorActivity</string>
    <string name="btn_dropbox">Dropbox</string>
    <string name="btn_onedrive">OneDrive</string>
    <string name="btn_gooledrive">Google Drive</string>
    <string name="action_settings">Settings</string>
    <string name="sensor">Sensor</string>
    <string name="privacy">Privacy</string>
    <string name="storage">Storage</string>
    <string name="about">About</string>
    <string name="sensors">Sensors</string>
    <string name="healthApp">Health App</string>
    <string name="allowSensorAccess">Allow Sensor Access</string>
    <string name="chooseAllowedSensors">Choose allowed Sensors :</string>
    <string name="title">Title</string>
    <string name="sendDataToSensor">Send Data to Sensor</string>
    <string name="smoothness">Smoothness</string>
    <string name="powerOptions">Power Options</string>
    <string name="copyright">Copyright 2014 &#8211; 2015</string>
    <string name="studienprojekt">Studienprojekt Garment OS</string>
    <string name="university">University of Stuttgart</string>
    <string name="title_activity_privacy">PrivacyActivity</string>
    <string name="privacySettings">Privacy Settings</string>
    <string name="title_activity_sensors">SensorsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_storage">StorageActivity</string>
    <string name="sensorSettings">Sensor Settings</string>
    <string name="title_activity_dropbox">DropboxActivity</string>
    <string name="btn_uploadDropbox">Upload SensorData</string>
    <string name="btn_downloadDropbox">Download SensorData</string>
    <string name="title_activity_database_debug_menu">DatabaseDebugMenuActivity</string>
    <string name="buttonTextCreateEncryptedDatabase">Create encrypted database</string>
    <string name="buttonTextCreateUnencryptedDatabase">Create unencrypted database</string>
    <string name="textFieldHintPassword">Password</string>
    <string name="buttonTextDataBaseTestMenu">DatabaseTestMenu</string>
    <string name="btn_DbSettings">Database Settings</string>
    <string name="title_activity_db_settings">DbSettingsActivity</string>
    <string name="btn_changePassword">Change password</string>
    <string name="btn_DbReset">Reset database</string>
    <string name="btn_DbOverwrite">Overwrite database</string>
    <string name="btn_changeDbPath">Change database location</string>
    <string name="Text">Status: -</string>
    <string name="on">Turn On</string>
    <string name="save">BT Save</string>
    <string name="off">Turn Off</string>
    <string name="encrypt">Encrypt Data</string>
    <string name="List">List paired Devices</string>
    <string name="Find">Search new Devices / Cancel</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="btn_addSensor">Add sensor</string>
    <string name="title_activity_sensor_detail">SensorDetailActivity</string>
    <string name="btn_exportDB">Export Database</string>
    <string name="title_activity_export_db">ExportDbActivity</string>
    <string name="tv_permission">No write permission, saving not possible</string>
    <string name="btn_save">Save</string>
    <string name="bt_as_client">Start Client</string>
    <string name="title_server_com">Server_View</string>
    <string name="bt_as_server">Start Server</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="btn_showGraph">Show graph</string>
    <string name="text_view_text_enter_database_password">Please enter the correct database password or press back to change the database path</string>
    <string name="title_activity_database_path_enter_fragment">DatabasePathEnterFragment</string>
    <string name="textViewText_chose_database_path">Please choose the path where your database will be stored or is already located</string>
    <string name="buttonText_save">Save</string>
    <string name="buttonText_back">Back</string>
    <string name="checkBoxText_remember_db_password">Remember password?\n(Not recommended)</string>
    <string name="buttonText_cancel">Cancel</string>
    <string name="checkBoxText_use_internal_directory">Use internal directory\n(Recommended)</string>
    <string name="OnOff">Sensor On/Off</string>
    <string name="btn_goBack">Cancel</string>
    <string name="har">Activity Recognition</string>
    <string name="title_activity_har">HARActivity</string>
    <string name="harSettings">Human Activity Recognition Settings</string>
    <string name="har_status">HAR status: </string>
    <string name="har_currenactivity">Current Activity: </string>
    <string name="btn_start_trainingHAR">Start training</string>
    <string name="har_popup_text">Select the activity</string>
    <string name="btn_popup_close">Start training</string>
    <string name="activity_status">Current activity</string>
    <string name="button_har_manage">Manage Neural Network</string>
    <string name="title_train_settings">Training settings</string>
    <string name="radioButton_train_live">Live</string>
    <string name="radioButton_train_DB">Database (coming soon)</string>
    <string name="textView_train_start_date">Start:</string>
    <string name="textView_train_end_date">End:</string>
    <string name="textView_train_activity">Activity:</string>
    <string name="textView_train_timeWindow">Time window length:</string>
    <string name="button_train_start">Start</string>
    <string name="button_train_cancle">Cancel</string>
    <string name="button_train_millisec">Milliseconds</string>
    <string name="edittext_train_recomended">2000</string>
    <string name="button_manager_sensors">Supported sensors</string>
    <string name="button_manager_sctivities">Supported activities</string>
    <string name="button_manager_save">Save neural network</string>
    <string name="har_button_manager_load">Load neural network</string>
    <string name="textView_manager_numberOfTrainings">Number of trainings:</string>
    <string name="textView_manager_numberOfSkippedTrainings">Number of skipped trainings:</string>
    <string name="har_button_manager_delete">Delete neural network</string>
    <string name="refresh">refresh</string>
    <string name="btn_Import">Import</string>
    <string name="btn_Export">Export</string>
    <string name="btn_local">Local</string>
    <string name="btn_importDropbox">Import</string>
    <string name="textView_text_no_archive_for_import">No archive available for import</string>
	<string name="har_button_manager_create">Create neural network</string>

</resources>