<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_current_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:padding="20dp"
        android:text="@string/text_view_text_enter_database_password" />

    <EditText
        android:id="@+id/editText_databasePasswordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_current_path"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/textFieldHintPassword"
        android:inputType="textPassword"
        android:padding="20dp" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkBox_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_databasePasswordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/checkBoxText_remember_db_password" />

    <Button
        android:id="@+id/button_ok_database_password_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox_remember_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:padding="20dp"
        android:text="@android:string/ok" />

    <Button
        android:id="@+id/button_cancel_database_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_ok_database_password_save"
        android:layout_alignBottom="@+id/button_ok_database_password_save"
        android:layout_alignRight="@+id/textView_current_path"
        android:layout_marginRight="14dp"
        android:padding="20dp"
        android:text="@string/buttonText_cancel" />

    <Button
        android:id="@+id/button_back_to_path_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_ok_database_password_save"
        android:layout_alignBottom="@+id/button_ok_database_password_save"
        android:layout_alignLeft="@+id/textView_current_path"
        android:layout_marginLeft="21dp"
        android:padding="20dp"
        android:text="@string/buttonText_back" />

</RelativeLayout>