<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0d6e4"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".HARActivityTraining" >

    <Button
        android:id="@+id/har_manager_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#606060"
        android:text="@string/button_manager_sensors"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/har_manager_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#606060"
        android:text="@string/button_manager_sctivities"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/har_manager_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#606060"
        android:text="@string/button_manager_save"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/har_manager_button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#606060"
        android:text="@string/har_button_manager_load"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <Button
        android:id="@+id/har_manager_button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#606060"
        android:text="@string/har_button_manager_delete"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c0d6e4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/har_manager_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/textView_manager_numberOfTrainings"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/har_manager_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c0d6e4"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/har_manager_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/textView_manager_numberOfSkippedTrainings"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/har_manager_textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>