<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0d6e4"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".HARActivityTraining"
    android:id="@+id/RelativeLayout">

    <RadioGroup
        android:id="@+id/har_train_radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:id="@+id/har_train_radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButton_train_live"
            android:textColor="#000000"/>

        <RadioButton
            android:id="@+id/har_train_radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_train_DB"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:id="@+id/har_train_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:layout_gravity="center"
        android:text="@string/textView_train_start_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_radioGroup1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/har_train_button1"
        style="?android:attr/spinnerStyle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".40"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_radioGroup1"
        android:layout_toRightOf="@+id/har_train_textView1"
        android:layout_marginLeft="30dp"
        android:minWidth="150dp" />

    <Button
        android:id="@+id/har_train_button2"
        style="?android:attr/spinnerStyle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_radioGroup1"
        android:layout_toRightOf="@+id/har_train_button1"
        android:layout_marginLeft="10dp"
        android:minWidth="80dp" />

    <TextView
        android:id="@+id/har_train_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:layout_gravity="center"
        android:text="@string/textView_train_end_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_button1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <Button
        android:id="@+id/har_train_button3"
        style="?android:attr/spinnerStyle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".40"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_button1"
        android:layout_alignLeft="@+id/har_train_button1"
        android:minWidth="150dp" />

    <Button
        android:id="@+id/har_train_button4"
        style="?android:attr/spinnerStyle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_button1"
        android:layout_alignLeft="@+id/har_train_button2"
        android:minWidth="80dp" />

    <TextView
        android:id="@+id/har_train_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".20"
        android:text="@string/textView_train_activity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_button3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

    <Spinner
        android:id="@+id/har_train_activity_spinner"
        style="?android:attr/spinnerStyle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight=".40"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_button3"
        android:layout_alignLeft="@+id/har_train_button1"
        android:minWidth="150dp" />

    <TextView
        android:id="@+id/har_train_textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_train_timeWindow"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_activity_spinner"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/har_train_editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".25"
        android:hint="@string/edittext_train_recomended"
        android:textColorHint="#999999"
        android:inputType="number"
        android:textColor="#000000"
        android:layout_below="@+id/har_train_textView4"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:enabled="false">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/har_train_textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/button_train_millisec"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:layout_toRightOf="@+id/har_train_editText1"
        android:layout_below="@+id/har_train_textView4"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/har_train_button6"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#606060"
        android:text="@string/button_train_cancle"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/har_train_editText1"
        android:layout_marginTop="10dp"
        android:minWidth="@android:dimen/thumbnail_width" />

    <Button
        android:id="@+id/har_train_button5"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:background="#606060"
        android:text="@string/button_train_start"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/har_train_editText1"
        android:layout_toRightOf="@+id/har_train_button6"
        android:layout_marginTop="10dp"
        android:minWidth="@android:dimen/thumbnail_width" />

</RelativeLayout>